--- a/src/modules/util/media-queries.scss
+++ b/src/modules/util/media-queries.scss
@@ -1,17 +1,22 @@
-// reference for media queries if needed
-// derived from https://getbootstrap.com/docs/5.0/layout/breakpoints/
+/* reference for media queries if needed
+ * derived from https://getbootstrap.com/docs/5.0/layout/breakpoints/ */
+
 @media (min-width: 576px) {
   /* Small devices (landscape phones, 576px and up) */
 }
+
 @media (min-width: 768px) {
   /* Medium devices (tablets, 768px and up) */
 }
+
 @media (min-width: 992px) {
   /* Large devices (desktops, 992px and up) */
 }
+
 @media (min-width: 1200px) {
   /* X-Large devices (large desktops, 1200px and up) */
 }
+
 @media (min-width: 1400px) {
   /* XX-Large devices (larger desktops, 1400px and up) */
 }
